syntax="proto3";

package orders_server;
option go_package = "proto/orders_server";

message Order {
    string email = 1;
    string restEmail = 2;
    string restPhone = 3;
    repeated OrderItem orderItem = 4;
}

message OrderItem {
    int64 menuId = 1;
    int64 quantity = 2;
}

message CreateOrderRequest {
    Order order = 1;
}

message CreateOrderResponse {
    string response = 1;
}

service Orders {
    // // Unary API to create orders
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {};
}